<resources>
    <string name="app_name">My Gas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_text_one">Search for Gas near you</string>
    <string name="login_text">Discover the gas from Over 3250 Agent</string>
    <string name="title_create_account">Create New Account</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_location">Your location</string>
    <string name="hint_dob">Date of Birth</string>
    <string name="create_button_text">Continue</string>
    <string name="error_name">name can not be empty</string>
    <string name="error_email">Invalid email</string>
    <string name="error_number">Must be more then 11 letter</string>
    <string name="error_address">Must write your address</string>
    <string name="error_dob">Write your birth date</string>
    <string name="my_gas">My Gas</string>
    <string name="login_page_subtitle">This is a Placeholder text</string>
    <string name="login_error_msg">Oh no! Your account or password is incorrect, please check again.</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password!</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_with_facebook">Sign In with Facebook</string>
    <string name="you_don_t_have_an_account">You don’t have an account?</string>
    <string name="recover">Please enter your Email so we can help you recover your password.</string>
    <string name="next">Next</string>
    <string name="verification_title">Verification</string>
    <string name="verification_text">Enter the OTP code from the phone we just sent you.</string>
    <string name="verification_error">Oh no! You entered wrong OTP code, please check it again.</string>
    <string name="otp_text">Didn’t receive OTP code!</string>
    <string name="resend">Resend</string>
    <string name="submit">Submit</string>
    <string name="reset_password_title">Reset Password</string>
    <string name="reset_password_subtitle">Enter your new password and confirm.</string>
    <string name="done">Done</string>
    <string name="password">New password</string>
    <string name="confirm_password">Confirm new password</string>
    <string name="confirm_pass_text">Password are not same</string>
    <string name="menu_home_title">Home</string>
    <string name="menu_home_near_by_title">Nearby</string>
    <string name="menu_home_order_title">Order</string>
    <string name="menu_home_favorites_title">Favorites</string>
    <string name="menu_home_profile_title">Profile</string>
    <string name="Icon_title_customers">Customers</string>
    <string name="Icon_title_sales">Sales</string>
    <string name="Icon_title_product">Product</string>
    <string name="Icon_title_expense">Expense</string>
    <string name="Icon_title_store">Store</string>
    <string name="Icon_title_representative">Representative</string>
    <string name="Icon_title_report">Report</string>
    <string name="Icon_title_income">Income</string>
    <string name="Icon_title_purchase_order">Purchase Order</string>
    <string name="Icon_title_activity_log">Activity Log</string>
    <string name="customers">Customers</string>
    <string name="customer_name">Customer Name</string>
    <string name="mobile_contact_no">Mobile / Contact No</string>
    <string name="retail_name">Retail Name</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="browse">Browse</string>
    <string name="choose_customer_image">Choose Customer Image</string>
    <string name="error_retail">retail can not be empty</string>
    <string name="sales">Sales</string>
    <string name="add_product">Add Product</string>
    <string name="choose_customer">Choose Customer</string>
    <string name="product">Product</string>
    <string name="product_name">Product Name</string>
    <string name="product_image">Product Image</string>
    <string name="product_cost">Product Cost</string>
    <string name="category_refill_package">Category (Refill / Package)</string>
    <string name="quantity">Quantity</string>
    <string name="company_name">Company Name</string>
    <string name="size">Size</string>
    <string name="unite_price_tk">Unite Price (TK)</string>
    <string name="total_tk">Total TK</string>
    <string name="profile">Profile</string>
    <string name="profile_name">Profile Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="my_vouchers">My Vouchers</string>
    <string name="notification">Notification</string>
    <string name="language">Language</string>
    <string name="settings">Settings</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="support">Support</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure">Are you Sure?"</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>