<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item
    android:id="@+id/home"
    android:title="@string/menu_home_title"
    android:icon="@drawable/ic_home"/>
    <item
        android:id="@+id/nearBy"
        android:title="@string/menu_home_near_by_title"
        android:icon="@drawable/ic_near_by"/>
    <item
        android:id="@+id/order"
        android:title="@string/menu_home_order_title"
        android:icon="@drawable/ic_order"/>
    <item
        android:id="@+id/favorites"
        android:title="@string/menu_home_favorites_title"
        android:icon="@drawable/ic_favourite"/>
    <item
        android:id="@+id/profile"
        android:title="@string/menu_home_profile_title"
        android:icon="@drawable/ic_profile"/>
</menu>