<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="com.example.mygas.presentation.login.LoginInputFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/titleIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_122"
                android:layout_marginTop="@dimen/view_height_56"
                android:layout_marginRight="@dimen/margin_122"
                app:layout_constraintBottom_toTopOf="@+id/titleTv"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_image_title" />

            <TextView
                android:id="@+id/titleTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_gas"
                android:textAlignment="center"
                android:textColor="@color/page_title_text_color"
                android:textSize="@dimen/text_size_29"
                app:layout_constraintBottom_toTopOf="@+id/subtitleTv"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleIv" />

            <TextView
                android:id="@+id/subtitleTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_122"
                android:layout_marginRight="@dimen/margin_122"
                android:text="@string/login_page_subtitle"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size_11"
                app:layout_constraintBottom_toTopOf="@+id/loginErrorTv"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleTv" />

            <TextView
                android:id="@+id/loginErrorTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_30"
                android:layout_marginTop="@dimen/margin_40"
                android:layout_marginRight="@dimen/margin_30"
                android:text="@string/login_error_msg"
                android:textAlignment="viewStart"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_11"
                app:layout_constraintBottom_toTopOf="@+id/constraint_two"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subtitleTv" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_30"
                android:layout_marginTop="@dimen/margin_15"
                android:layout_marginRight="@dimen/margin_30"
                app:layout_constraintBottom_toTopOf="@+id/container"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginErrorTv">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_editetext_bg"
                    android:paddingTop="@dimen/padding_5"
                    android:textColorHint="@color/hint_text_color"
                    app:layout_constraintBottom_toTopOf="@+id/password"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/hint_email"
                        android:inputType="text"
                        android:paddingLeft="@dimen/padding_14"
                        android:paddingTop="@dimen/padding_7"
                        android:paddingBottom="@dimen/padding_12"
                        android:textColor="@color/page_title_text_color"
                        android:textSize="@dimen/text_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20"
                    android:background="@drawable/rounded_editetext_bg"
                    android:textColorHint="@color/hint_text_color"
                    app:layout_constraintBottom_toTopOf="@+id/constraint_three"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/email"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/hint_text_color">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:paddingLeft="@dimen/padding_14"
                        android:textColor="@color/page_title_text_color"
                        android:textSize="@dimen/text_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_three"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_15"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password">

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/btnCheckbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="0dp"
                        android:minHeight="0dp"
                        android:text="@string/remember_me"
                        android:textColor="@color/text_color"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/forgotEt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{model.actionForgot}"
                        android:text="@string/forgot_password"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/text_size"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/btnSignIn"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_41"
                    android:backgroundTint="@color/colorPrimary"
                    android:padding="@dimen/button_padding"
                    android:text="@string/sign_in"
                    android:textSize="@dimen/text_size"
                    app:layout_constraintBottom_toTopOf="@+id/ntn_signin_facebook"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraint_three" />

                <Button
                    android:id="@+id/ntn_signin_facebook"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/card_radius_20"
                    android:backgroundTint="@color/signIn_btn_color"
                    android:padding="@dimen/button_padding"
                    android:text="@string/sign_in_with_facebook"
                    android:textSize="@dimen/text_size"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_45"
                android:layout_marginBottom="@dimen/margin_30"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraint_two">

                <TextView
                    android:id="@+id/noAccountTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/you_don_t_have_an_account"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/page_title_text_color"
                    android:textSize="@dimen/text_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/signUpTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_5"
                    android:layout_weight="1"
                    android:onClick="@{model.actionSignUp}"
                    android:text="SignUp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/Tv1"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>