<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.login.LoginChangePassFragment">

    <data>

        <variable
            name="model"
            type="com.example.mygas.presentation.login.LoginChangePassFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@color/background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/backIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_11"
                android:layout_marginTop="@dimen/margin_20"
                android:background="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_30"
                android:layout_marginRight="@dimen/margin_30"
                app:layout_constraintTop_toBottomOf="@+id/backIv">

                <TextView
                    android:id="@+id/titleTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reset_password_title"
                    android:textColor="@color/page_title_text_color"
                    android:textSize="@dimen/title_text_size"
                    android:layout_marginTop="@dimen/margin_29"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/subtitlrTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_15"
                    android:text="@string/reset_password_subtitle"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_size"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/titleTv" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/newPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_editetext_bg"
                    android:layout_marginTop="@dimen/margin_40"
                    android:paddingTop="@dimen/padding_3"
                    android:paddingBottom="@dimen/padding_5"
                    android:textColorHint="@color/hint_text_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/subtitlrTv"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/hint_text_color">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/newPasswordEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/password"
                        android:textSize="@dimen/text_size"
                        android:paddingLeft="@dimen/padding_14"
                        android:textColor="@color/page_title_text_color"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/newConfirmPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_editetext_bg"
                    android:layout_marginTop="@dimen/margin_20"
                    android:paddingTop="@dimen/padding_3"
                    android:paddingBottom="@dimen/padding_5"
                    android:textColorHint="@color/hint_text_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/newPassword"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/hint_text_color">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/newConfirmPasswordEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/confirm_password"
                        android:textSize="@dimen/text_size"
                        android:paddingLeft="@dimen/padding_14"
                        android:textColor="@color/page_title_text_color"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnDone"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_30"
                    android:layout_marginBottom="@dimen/margin_92"
                    android:backgroundTint="@color/colorPrimary"
                    android:padding="@dimen/padding_14"
                    android:onClick="@{model.actionSignIn}"
                    android:text="@string/done"
                    android:textSize="@dimen/text_size"
                    android:enabled="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/newConfirmPassword" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</layout>