<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="com.example.mygas.presentation.login.LoginForgotPasswordFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".presentation.login.LoginForgotPasswordFragment"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/backIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_15"
                android:layout_marginTop="@dimen/margin_22"
                android:background="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_30"
                android:layout_marginLeft="@dimen/margin_30"
                android:paddingBottom="@dimen/padding_30"
                app:layout_constraintTop_toBottomOf="@+id/backIv"
                >

                <TextView
                    android:id="@+id/titleTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_29"
                    android:text="@string/forgot_password"
                    android:textColor="@color/page_title_text_color"
                    android:textSize="@dimen/title_text_size"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/subtitleTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:text="@string/recover"
                    android:textAlignment="viewStart"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_size"
                    app:layout_constraintBottom_toTopOf="@+id/email"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/titleTv" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_editetext_bg"
                    android:paddingTop="@dimen/margin_5"
                    android:paddingBottom="@dimen/margin_6"
                    android:layout_marginTop="@dimen/margin_40"
                    android:textColorHint="@color/hint_text_color"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/subtitleTv">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/hint_email"
                        android:inputType="text"
                        android:paddingLeft="@dimen/padding_14"
                        android:paddingTop="@dimen/padding_3"
                        android:paddingBottom="@dimen/padding_5"
                        android:textColor="@color/page_title_text_color"
                        android:textSize="@dimen/text_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnNext"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="@dimen/margin_15"
                    android:backgroundTint="@color/red_500_shadow"
                    android:enabled="false"
                    android:padding="@dimen/button_padding"
                    android:text="@string/next"
                    android:textSize="@dimen/text_size"
                    android:onClick="@{model.actionVarify}"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/email" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>